# puzzle-model

./: .gitignore  CLAUDE.md  DEVLOG.md  LICENSE  Makefile  README.md  deploy.sh  explore.py  explorer.html  explorer_auto.html  explorer_auto_data.json  explorer_data.json  explorer_solo.html  explorer_team.html  index.html  index.html.bak  main.py  noise.html  noise_data.json  prediction.html  prediction_data.json  puzzle_images  pyproject.toml  team_diagnostics.html
data/: MalloryPuzzleData.csv
data/mappings/: player_links.csv
data/processed/: speedpuzzling_results.csv  usajigsaw_results.csv  wjpf_results.csv
doc/: paper.typ
notebooks/: 01_eda.py  02_model_fit.py
scraper/: __init__.py  combine.py  myspeedpuzzling.py  speedpuzzling.py  usajigsaw.py  wjpf.py  wjpf_common.py
scripts/: analyze_noise.py  compare_3d.py  compute_waic.py  diagnostic_sources.py  extract_model4_params.py  fit_model2c_logonly.py  fit_model4.py  parse_tournament.py  refit_all.py  refit_team.py  simulate_nationals.py  slim_data.py  suggest_player_links.py
src/puzzle_model/: __init__.py  basis.py  data.py  evaluate.py  inference.py  model.py  predict.py
