[project]
name = "puzzle-model"
version = "0.1.0"
description = "Bayesian latent factor model for speed puzzling competition times"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arviz>=0.21.0",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.0",
    "jax[cpu]>=0.6.0",
    "lxml>=6.0.2",
    "marimo>=0.18.4",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "numpyro>=0.18.0",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "playwright>=1.57.0",
    "requests>=2.32.5",
    "scipy>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/puzzle_model"]
